Markers are added to map by api call(no animation yet) | probable needs marker grouping in order to avoid overlaps and overloads

--- a/MTTrackApi_cdimizas/app/styles/myStyles.css
+++ b/MTTrackApi_cdimizas/app/styles/myStyles.css
@@ -597,6 +597,36 @@ ul.lower-roman {
     height: 100%;
     width: 100%;
 }
+.days-select-style select {
+    border: 0;
+    color: white;
+    background: transparent;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 2px 10px;
+    width: 100%;
+    *background: #a79f96;
+    -webkit-appearance: none;
+}
+
+.days-select-style {
+    overflow:hidden;
+    width:100%;
+    -moz-border-radius: 9px 9px 9px 9px;
+    -webkit-border-radius: 9px 9px 9px 9px;
+    border-radius: 2px;
+    box-shadow: 1px 1px 11px #330033;
+    background: #a79f96 url("http://i62.tinypic.com/15xvbd5.png") no-repeat scroll 319px center;
+}
+
+.text-align-center{
+    text-align: center !important;
+}
+
+.height-30px{
+    height:30px;
+    line-height:30px;
+}
 
 @media only screen and (min-width: 1200px){
     .info li {
